--- a/app/settings.json
+++ b/app/settings.json
@@ -51,5 +51,9 @@
         "city": "Anycity",
         "countryCode": "FR",
         "postalCode": "33445"
-    }
+    },
+    "mysql_password": "password",
+    "testapi_token": "testapi",
+    "testapi_secret": "testpass",
+    "test_mode": true
 }
